--- a/src/app/pages/diary-summary/diary-summary.component.html
+++ b/src/app/pages/diary-summary/diary-summary.component.html
@@ -70,7 +70,7 @@
             </div>
           </div>
 
-          <div class="p-4 bg-blue-50 rounded-lg">
+          <!-- <div class="p-4 bg-blue-50 rounded-lg">
             <div class="flex items-center">
               <div class="p-3 rounded-full bg-blue-100 mr-4">
                 <ion-icon name="cash-outline" class="text-2xl text-blue-600"></ion-icon>
@@ -80,9 +80,9 @@
                 <h3 class="text-xl font-bold text-gray-900">{{getTotalAmount() | number:'1.2-2'}}</h3>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="p-4 bg-purple-50 rounded-lg">
+          <!-- <div class="p-4 bg-purple-50 rounded-lg">
             <div class="flex items-center">
               <div class="p-3 rounded-full bg-purple-100 mr-4">
                 <ion-icon name="person-outline" class="text-2xl text-purple-600"></ion-icon>
@@ -92,7 +92,7 @@
                 <h3 class="text-xl font-bold text-gray-900">{{getDesignerConfirmedCount()}}</h3>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
