--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -37,7 +37,7 @@
     </ngx-datatable-column>
     <ngx-datatable-column name="ชื่อผู้ขาย" prop="seller_name">
       <ng-template let-row="row" ngx-datatable-cell-template>
-        {{row.seller_name ||''}}
+        {{row.seller_name || row.seller || ''}}
       </ng-template>
     </ngx-datatable-column>
     <ngx-datatable-column name="ผู้ออกแบบ" prop="design_by">
